# basicsofprogrammingcourse

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/vector/: int_vector.c  int_vector.h  void_vector.c  void_vector.h
